--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -69,6 +69,7 @@ specs:
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne =1.9.0=pyside6_*_100
+  - mne-base =1.9.0
   - mne-installer-menus =1.9.0=*_100
   # # For testing purposes with build_local.sh, you can comment out all deps
   # # below for speed, and change mne to mne-base above
@@ -138,8 +139,8 @@ specs:
   # - pandas =2.2.3
   # - polars =1.22.0
   # - scipy =1.15.2
-  # - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
-  # - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
+  - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
+  - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
   # - libblas =3.9.0=*openblas
   # - jupyter =1.1.1
   # - jupyterlab =4.3.5
@@ -150,7 +151,7 @@ specs:
   # # spyder =6.1.0
   # - darkdetect =0.8.0
   # - qdarkstyle =3.2.3
-  # - numba =0.61.0
+  - numba =0.61.0
   # - cython =3.0.12
   # # I/O
   # - pyxdf =1.17.0
@@ -167,13 +168,13 @@ specs:
   # # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   # - matplotlib-base =3.10.0
   # - tornado =6.4.2
-  # - pyside6 =6.8.2
-  # - qt6-main =6.8.2
+  - pyside6 =6.8.2
+  - qt6-main =6.8.2
   # - ipympl =0.9.6
   # - qtpy =2.4.3
   # - seaborn =0.13.2
   # - plotly =6.0.0
-  # - vtk =9.3.1=qt*
+  - vtk =9.3.1=qt*
   # - ipywidgets =8.1.5
   # - pyvista =0.44.2
   # - pyvistaqt =0.11.2
