--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -131,49 +131,49 @@ specs:
   # # <<< END RELATED SOFTWARE LIST >>>
   # # ^^^ this line is special and used by MNE-Python, do not change it!
 
-  # - antropy =0.1.9
-  # - mayavi =4.8.2=pyside6_*
-  # - traitsui =8.0.0
-  # - pyface =8.0.0=*_1
-  # - imageio-ffmpeg =0.6.0
-  # - pandas =2.2.3
-  # - polars =1.22.0
-  # - scipy =1.15.2
+  - antropy =0.1.9
+  - mayavi =4.8.2=pyside6_*
+  - traitsui =8.0.0
+  - pyface =8.0.0=*_1
+  - imageio-ffmpeg =0.6.0
+  - pandas =2.2.3
+  - polars =1.22.0
+  - scipy =1.15.2
   - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
-  # - libblas =3.9.0=*openblas
-  # - jupyter =1.1.1
-  # - jupyterlab =4.3.5
-  # - ipykernel =6.29.5
-  # - spyder-kernels =3.0.3
-  # # TODO: Needs to not require pyqt
-  # # https://github.com/spyder-ide/spyder/issues/20201
-  # # spyder =6.1.0
-  # - darkdetect =0.8.0
-  # - qdarkstyle =3.2.3
+  - libblas =3.9.0=*openblas
+  - jupyter =1.1.1
+  - jupyterlab =4.3.5
+  - ipykernel =6.29.5
+  - spyder-kernels =3.0.3
+  # TODO: Needs to not require pyqt
+  # https://github.com/spyder-ide/spyder/issues/20201
+  # spyder =6.1.0
+  - darkdetect =0.8.0
+  - qdarkstyle =3.2.3
   - numba =0.61.0
-  # - cython =3.0.12
-  # # I/O
-  # - pyxdf =1.17.0
-  # - openpyxl =3.1.5
-  # - xlrd =2.0.1
-  # # Statistics
-  # - pingouin =0.5.5
-  # # NeuroSpin needs the following
-  # - questionary =2.1.0
-  # - pqdm =0.2.0
-  # - astropy =7.0.1
-  # # Viz
-  # # matplotilb is just matplotlib-base, tornado, and pyqt
-  # # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
-  # - matplotlib-base =3.10.0
-  # - tornado =6.4.2
+  - cython =3.0.12
+  # I/O
+  - pyxdf =1.17.0
+  - openpyxl =3.1.5
+  - xlrd =2.0.1
+  # Statistics
+  - pingouin =0.5.5
+  # NeuroSpin needs the following
+  - questionary =2.1.0
+  - pqdm =0.2.0
+  - astropy =7.0.1
+  # Viz
+  # matplotilb is just matplotlib-base, tornado, and pyqt
+  # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
+  - matplotlib-base =3.10.0
+  - tornado =6.4.2
   - pyside6 =6.8.2
   - qt6-main =6.8.2
-  # - ipympl =0.9.6
-  # - qtpy =2.4.3
-  # - seaborn =0.13.2
-  # - plotly =6.0.0
+  - ipympl =0.9.6
+  - qtpy =2.4.3
+  - seaborn =0.13.2
+  - plotly =6.0.0
   - vtk =9.3.1=qt*
   # - ipywidgets =8.1.5
   # - pyvista =0.44.2
