--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -37,7 +37,7 @@ installer_filename: MNE-Python-1.9.0_0-Linux.sh         # [linux]
 
 post_install: ../../assets/post_install_macOS.sh        # [osx]
 post_install: ../../assets/post_install_linux.sh        # [linux]
-# post_install: ../../assets/post_install_windows.bat     # [win]
+post_install: ../../assets/post_install_windows.bat     # [win]
 
 # Create signed macOS .pkg installer
 installer_type: pkg                     # [osx]
@@ -68,68 +68,67 @@ specs:
   # - mne-installer-menus =1.4dev0=*_20230503
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  # - mne =1.9.0=pyside6_*_100
-  - mne-base =1.9.0
+  - mne =1.9.0=pyside6_*_100
   - mne-installer-menus =1.9.0=*_100
-  # # For testing purposes with build_local.sh, you can comment out all deps
-  # # below for speed, and change mne to mne-base above
+  # For testing purposes with build_local.sh, you can comment out all deps
+  # below for speed, and change mne to mne-base above
 
-  # # vvv this line is special and used by MNE-Python, do not change it!
-  # # <<< BEGIN RELATED SOFTWARE LIST >>>
-  # - mne-bids =0.16.0
-  # - mne-bids-pipeline =1.9.0
-  # - mne-qt-browser =0.6.3
-  # - mne-connectivity =0.7.0=*_1
-  # - mne-faster =1.2.2
-  # - mne-nirs =0.7.1
-  # - mne-features =0.3
-  # - mne-rsa =0.9.1
-  # - mne-ari =0.1.2
-  # - mne-icalabel =0.7.0
-  # - mne-gui-addons =0.1=*_1
-  # - mne-lsl =1.8.0
-  # - mne-kit-gui =1.3.0
-  # - autoreject =0.4.3
-  # - antio =0.5.0
-  # - wfdb =4.2.0
-  # - meegkit =0.1.9
-  # - eeg_positions =2.1.2
-  # # MRI
-  # - fsleyes =1.14.1
-  # - dcm2niix =1.0.20241211
-  # - dipy =1.10.0
-  # # Time-frequency analysis
-  # - pactools =0.3.1
-  # - tensorpac =0.6.5
-  # - emd =0.8.0
-  # - neurodsp =2.3.0
-  # - bycycle =1.1.0
-  # - fooof =1.0.0
-  # # Microstates
-  # - mne-microstates =0.3.0
-  # - pycrostates =0.6.1
-  # # OpenNeuro.org data access
-  # - openneuro-py =2024.2.0
-  # # sleep staging
-  # - sleepecg =0.5.9=*_2
-  # - yasa =0.6.5
-  # # various biological signals (ECG, EOG, EMG, …)
-  # - neurokit2 =0.2.10
-  # - mnelab =1.0.0
-  # # other
-  # - pyriemann =0.8
-  # - pyprep =0.4.3=*_1
-  # - python-picard =0.8
-  # - pybv =0.7.6
-  # - edfio =0.4.5
-  # - eeglabio =0.0.3
-  # - mffpy =0.10.0
-  # - openmeeg =2.5.15
-  # - python-neo =0.14.0
-  # - nitime =0.11
-  # - snirf =0.8.0
-  # # <<< END RELATED SOFTWARE LIST >>>
-  # # ^^^ this line is special and used by MNE-Python, do not change it!
+  # vvv this line is special and used by MNE-Python, do not change it!
+  # <<< BEGIN RELATED SOFTWARE LIST >>>
+  - mne-bids =0.16.0
+  - mne-bids-pipeline =1.9.0
+  - mne-qt-browser =0.6.3
+  - mne-connectivity =0.7.0=*_1
+  - mne-faster =1.2.2
+  - mne-nirs =0.7.1
+  - mne-features =0.3
+  - mne-rsa =0.9.1
+  - mne-ari =0.1.2
+  - mne-icalabel =0.7.0
+  - mne-gui-addons =0.1=*_1
+  - mne-lsl =1.8.0
+  - mne-kit-gui =1.3.0
+  - autoreject =0.4.3
+  - antio =0.5.0
+  - wfdb =4.2.0
+  - meegkit =0.1.9
+  - eeg_positions =2.1.2
+  # MRI
+  - fsleyes =1.14.1
+  - dcm2niix =1.0.20241211
+  - dipy =1.10.0
+  # Time-frequency analysis
+  - pactools =0.3.1
+  - tensorpac =0.6.5
+  - emd =0.8.0
+  - neurodsp =2.3.0
+  - bycycle =1.1.0
+  - fooof =1.0.0
+  # Microstates
+  - mne-microstates =0.3.0
+  - pycrostates =0.6.1
+  # OpenNeuro.org data access
+  - openneuro-py =2024.2.0
+  # sleep staging
+  - sleepecg =0.5.9=*_2
+  - yasa =0.6.5
+  # various biological signals (ECG, EOG, EMG, …)
+  - neurokit2 =0.2.10
+  - mnelab =1.0.0
+  # other
+  - pyriemann =0.8
+  - pyprep =0.4.3=*_1
+  - python-picard =0.8
+  - pybv =0.7.6
+  - edfio =0.4.5
+  - eeglabio =0.0.3
+  - mffpy =0.10.0
+  - openmeeg =2.5.15
+  - python-neo =0.14.0
+  - nitime =0.11
+  - snirf =0.8.0
+  # <<< END RELATED SOFTWARE LIST >>>
+  # ^^^ this line is special and used by MNE-Python, do not change it!
 
   - antropy =0.1.9
   - mayavi =4.8.2=pyside6_*
@@ -175,56 +174,56 @@ specs:
   - seaborn =0.13.2
   - plotly =6.0.0
   - vtk =9.3.1=qt*
-  # - ipywidgets =8.1.5
-  # - pyvista =0.44.2
-  # - pyvistaqt =0.11.2
-  # - trame =3.8.0
-  # - trame-vtk =2.8.15
-  # - trame-vuetify =2.8.1
-  # - termcolor =2.5.0
-  # - defusedxml =0.7.1
-  # # Development
-  # - gh =2.67.0
-  # - setuptools_scm =8.2.0
-  # - pytest =8.3.4
-  # - pytest-cov =6.0.0
-  # - pytest-qt =4.4.0
-  # - pytest-timeout =2.3.1
-  # - pre-commit =4.1.0
-  # - ruff =0.9.7
-  # - uv =0.6.2
-  # - check-manifest =0.50
-  # - codespell =2.4.1
-  # - py-spy =0.4.0
-  # - line_profiler =4.2.0
-  # - memory_profiler =0.61.0
-  # - twine =6.1.0
-  # - hatchling =1.27.0
-  # - hatch-vcs =0.4.0
-  # - mypy =1.15.0
-  # - towncrier =23.11.0  # allow_outdated, 24.7.1 doesn't work with sphinxcontrib-towncrier
-  # - vulture =2.14
-  # # Doc building
-  # - numpydoc =1.8.0
-  # - pydata-sphinx-theme =0.16.1
-  # - graphviz =12.2.1
-  # - python-graphviz =0.20.3
-  # - selenium =4.29.0
-  # - sphinx =8.2.1
-  # - sphinx-design =0.6.1
-  # - sphinx-gallery =0.19.0
-  # - sphinxcontrib-bibtex =2.6.3
-  # - sphinx-copybutton =0.5.2
-  # - sphinxcontrib-youtube =1.4.1
-  # - intersphinx-registry =0.2501.23
-  # # OS-specific
-  # - git =2.48.1  # [win]
-  # - make =4.4.1  # [win]
-  # - pyobjc-core =11.0  # [osx]
-  # # https://github.com/conda-forge/libffi-feedstock/issues/52
-  # - libffi =3.4.2  # [osx and arm64]  # allow_outdated
-  # - pyobjc-framework-Cocoa =11.0  # [osx]
-  # - pyobjc-framework-FSEvents =11.0  # [osx]
+  - ipywidgets =8.1.5
+  - pyvista =0.44.2
+  - pyvistaqt =0.11.2
+  - trame =3.8.0
+  - trame-vtk =2.8.15
+  - trame-vuetify =2.8.1
+  - termcolor =2.5.0
+  - defusedxml =0.7.1
+  # Development
+  - gh =2.67.0
+  - setuptools_scm =8.2.0
+  - pytest =8.3.4
+  - pytest-cov =6.0.0
+  - pytest-qt =4.4.0
+  - pytest-timeout =2.3.1
+  - pre-commit =4.1.0
+  - ruff =0.9.7
+  - uv =0.6.2
+  - check-manifest =0.50
+  - codespell =2.4.1
+  - py-spy =0.4.0
+  - line_profiler =4.2.0
+  - memory_profiler =0.61.0
+  - twine =6.1.0
+  - hatchling =1.27.0
+  - hatch-vcs =0.4.0
+  - mypy =1.15.0
+  - towncrier =23.11.0  # allow_outdated, 24.7.1 doesn't work with sphinxcontrib-towncrier
+  - vulture =2.14
+  # Doc building
+  - numpydoc =1.8.0
+  - pydata-sphinx-theme =0.16.1
+  - graphviz =12.2.1
+  - python-graphviz =0.20.3
+  - selenium =4.29.0
+  - sphinx =8.2.1
+  - sphinx-design =0.6.1
+  - sphinx-gallery =0.19.0
+  - sphinxcontrib-bibtex =2.6.3
+  - sphinx-copybutton =0.5.2
+  - sphinxcontrib-youtube =1.4.1
+  - intersphinx-registry =0.2501.23
+  # OS-specific
+  - git =2.48.1  # [win]
+  - make =4.4.1  # [win]
+  - pyobjc-core =11.0  # [osx]
+  # https://github.com/conda-forge/libffi-feedstock/issues/52
+  - libffi =3.4.2  # [osx and arm64]  # allow_outdated
+  - pyobjc-framework-Cocoa =11.0  # [osx]
+  - pyobjc-framework-FSEvents =11.0  # [osx]
 condarc:
   channels:
     - conda-forge
