--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -69,8 +69,8 @@ specs:
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne =1.9.0=pyside6_*_100
-  - mne-base =1.9.0
-  - mne-installer-menus =1.9.0=*_100
+  # - mne-base =1.9.0
+  # - mne-installer-menus =1.9.0=*_100
   # # For testing purposes with build_local.sh, you can comment out all deps
   # # below for speed, and change mne to mne-base above
 
@@ -131,21 +131,21 @@ specs:
   # # <<< END RELATED SOFTWARE LIST >>>
   # # ^^^ this line is special and used by MNE-Python, do not change it!
 
-  # - antropy =0.1.9
-  # - mayavi =4.8.2=pyside6_*
-  # - traitsui =8.0.0
-  # - pyface =8.0.0=*_1
-  # - imageio-ffmpeg =0.6.0
-  # - pandas =2.2.3
-  # - polars =1.22.0
-  # - scipy =1.15.2
-  # - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
-  # - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
-  # - libblas =3.9.0=*openblas
-  # - jupyter =1.1.1
-  # - jupyterlab =4.3.5
-  # - ipykernel =6.29.5
-  # - spyder-kernels =3.0.3
+  - antropy =0.1.9
+  - mayavi =4.8.2=pyside6_*
+  - traitsui =8.0.0
+  - pyface =8.0.0=*_1
+  - imageio-ffmpeg =0.6.0
+  - pandas =2.2.3
+  - polars =1.22.0
+  - scipy =1.15.2
+  - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
+  - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
+  - libblas =3.9.0=*openblas
+  - jupyter =1.1.1
+  - jupyterlab =4.3.5
+  - ipykernel =6.29.5
+  - spyder-kernels =3.0.3
   # TODO: Needs to not require pyqt
   # https://github.com/spyder-ide/spyder/issues/20201
   # spyder =6.1.0
