--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -93,10 +93,10 @@ specs:
   - pingouin =0.5.5
   - questionary =2.1.0
   - pqdm =0.2.0
-  # - astropy =7.0.1
-  # - matplotlib-base =3.10.0
-  # - tornado =6.4.2
-  # - ipympl =0.9.6
+  - astropy =7.0.1
+  - matplotlib-base =3.10.0
+  - tornado =6.4.2
+  - ipympl =0.9.6
   # - qtpy =2.4.3
   # - seaborn =0.13.2
   # - plotly =6.0.0
